[package]
name = "rockchain"
version = "0.1.0"
authors = ["kujenga <ataylor0123@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.7"
byteorder = "1"
iron = "*"
router = "*"
logger = { git = "https://github.com/iron/logger.git" }
log = "0.3"
env_logger = "0.4"
persistent = "*"
url = "1.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2"
bodyparser = { git = "https://github.com/iron/body-parser.git" }
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
