[package]
name = "rockchain"
version = "0.1.0"
authors = ["kujenga <git@ataylor.io>"]
edition = "2021"

[dependencies]
axum = "0.5"
"axum-macros" = "*"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sha2 = "0.7"
bytes = "1"
byteorder = "1"
log = "0.3"
url = "1.6"
serde_json = "1.0"
url_serde = "0.2"
futures = "0.3"
hyper = { version = "0.14", features = ["client"] }
